--- a/projectTH1/index.html
+++ b/projectTH1/index.html
@@ -12,7 +12,7 @@
         <ul class="nav">
           <li class="name"><Strong><h2>Moses Williams III</h2></Strong></li>
           <li><a href="index.html" class="nav">Home</a></li>
-          <li><a href="experience.html">Experience</a></li>
+          <li><a href="idowhatiwant.html">I Do What I Want!</a></li>
         </ul>
     </div>
 
