--- a/projectTH1/idowhatiwant.html
+++ b/projectTH1/idowhatiwant.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="new-pic">
 <head>
   <meta charset="utf-8">
   <title>Moses Williams III's Profile</title>
@@ -16,7 +16,7 @@
         </ul>
     </div>
 
-    <header>
+    <header class="background">
       <img src="images/herc.png" alt="I run a couple of my own sites :) ." class="profile-image">
       <p class="tag name">Head of project management and marketing for Phyersoft indie gaming development.</p>
       <p class="tag location">What is cooler than robots doing battle, but not the way you think!</p>
