--- a/projectTH1/index.html
+++ b/projectTH1/index.html
@@ -36,8 +36,8 @@
         <p>A broken clock is correct two time a day.</p>
       </div>
 
-      <section>
-      <div class=The Future</h2>
+    <main class="flex">
+      <div class="card"</h2>
         <p>I really want to be a ninja. Yeah it's true!:</p>
         <ul class="skills">
           <li>C++</li>
@@ -49,7 +49,7 @@
         <p>I am never satisfied with any of my design. It's like writer's block for coders.</p>
       </div> 
     </main>  
-    </section>
+    
 
       <footer>
       <ul>
