--- a/projectTH1/idowhatiwant.html
+++ b/projectTH1/idowhatiwant.html
@@ -16,7 +16,7 @@
         </ul>
     </div>
 
-    <header class="background">
+    <header background: url('images/psfour.jpg')>
       <img src="images/herc.png" alt="I run a couple of my own sites :) ." class="profile-image">
       <p class="tag name">Head of project management and marketing for Phyersoft indie gaming development.</p>
       <p class="tag location">What is cooler than robots doing battle, but not the way you think!</p>
